--- a/contact.html
+++ b/contact.html
@@ -44,9 +44,9 @@
             <img src="contact us/logo.png" alt="krishi organics">
             <h2>Send Us a Message</h2>
             <div class="soi">
-                <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+                <li><a href="https://www.facebook.com/profile.php?id=61562248426338"><i class="fa-brands fa-facebook"></i></a></li>
+                <li><a href="https://www.instagram.com/krishiorganics?igsh=MWZnMXFnY3Zwb2YxYw=="><i class="fa-brands fa-instagram"></i></a></li>
+                <li><a href="https://www.youtube.com/@krishiorganics.01"><i class="fa-brands fa-youtube"></i></a></li>
             </div>
             
         </div>
@@ -121,13 +121,13 @@
                 <h4>© Copyright 2024 by Krishi Organics</h4>
             </div>
             <div class="subfooter-right flex">
-                <a href="#">
+                <a href="https://www.facebook.com/people/Krishi-Organics/pfbid0GmbNVEAZbMyqhY62KfN87G4NkafSU8ZQrAgk3u4MaYYw31PoJGpkkYhrPBJJeF9hl/">
                     <i class="fa-brands fa-facebook-f" style="color: #ffffff;"></i>
                 </a>
-                <a href="#">
+                <a href="https://www.instagram.com/krishiorganics/?igsh=MWZnMXFnY3Zwb2YxYw%3D%3D">
                     <i class="fa-brands fa-instagram" style="color: #f6f7f8;"></i>
                 </a>
-                <a href="#">
+                <a href="https://www.youtube.com/@krishiorganics.01">
                     <i class="fa-brands fa-youtube" style="color: #f7f7f8;"></i>
                 </a>
             </div>
