--- a/index.html
+++ b/index.html
@@ -176,13 +176,13 @@
                 <h4>© Copyright 2024 by Krishi Organics</h4>
             </div>
             <div class="subfooter-right flex">
-                <a href="#">
+                <a href="https://www.facebook.com/people/Krishi-Organics/pfbid0GmbNVEAZbMyqhY62KfN87G4NkafSU8ZQrAgk3u4MaYYw31PoJGpkkYhrPBJJeF9hl/">
                     <i class="fa-brands fa-facebook-f" style="color: #ffffff;"></i>
                 </a>
-                <a href="#">
+                <a href="https://www.instagram.com/krishiorganics/?igsh=MWZnMXFnY3Zwb2YxYw%3D%3D">
                     <i class="fa-brands fa-instagram" style="color: #f6f7f8;"></i>
                 </a>
-                <a href="#">
+                <a href="https://www.youtube.com/@krishiorganics.01">
                     <i class="fa-brands fa-youtube" style="color: #f7f7f8;"></i>
                 </a>
             </div>
