--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <ul class="flex">
                     <li><a href="index.html" class="hover-links">Home</a></li>
                     <li><a href="AboutUs.html" class="hover-links">About Us</a></li>
-                    <li><a href="#" class="hover-links">Products</a></li>
+                    <li><a href="product.html" class="hover-links">Products</a></li>
                     <li><a href="contact.html" class="hover-links">Contact Us</a></li>
                 </ul>
             </div>
