--- a/product.html
+++ b/product.html
@@ -52,85 +52,85 @@
             </div>
             <div class="product">
                 <a href="product.html">
-                    <img src="resenta.jpg" alt="Resenta">
-                    <h2>RESENTA® (Fipronil 40% + Imidacloprid 40% WG)</h2>
+                    <img src="resenta.jpg" alt="BioQueen">
+                    <h2>Bio Queen</h2>
                     <p>Min. Qty: 10 Kilograms</p>
                 </a>
             </div>
             <div class="product">
                 <a href="product.html">
-                    <img src="lucifer.jpg" alt="Lucifer">
-                    <h2>LUCIFER® (Thiamethoxam 12.6% + Lambda Cyhalothrin)</h2>
+                    <img src="lucifer.jpg" alt="KrishakPower">
+                    <h2>Krishak Power (NPK 19:19:19)</h2>
                     <p>Min. Qty: 10 Kilograms</p>
                 </a>
             </div>
             <div class="product">
                 <a href="product.html">
-                    <img src="volafax.jpg" alt="Volafax">
-                    <h2>VOLAFAX® (Emamectin Benzoate 3.0%)</h2>
+                    <img src="volafax.jpg" alt="Adbhut">
+                    <h2>Adbhut  (magnesium(mg), sulfur(s), iron(fe), manganese(mg), zinc(zn), copper(cu), boron(b), molybdenum(mo))</h2>
                     <p>Min. Qty: 10 Kilograms</p>
                 </a>
             </div>
             <div class="product">
                 <a href="product.html">
-                    <img src="otic-tango.jpg" alt="Otic Tango">
-                    <h2>OTIC TANGO®</h2>
+                    <img src="otic-tango.jpg" alt="Calbor">
+                    <h2>Calbor calcium(30%) + Boron(5%)</h2>
                     <p>Min. Qty: 10 Kilograms</p>
                 </a>
             </div>
             <div class="product">
                 <a href="product.html">
-                    <img src="zulu.jpg" alt="Zulu">
-                    <h2>ZULU®</h2>
+                    <img src="zulu.jpg" alt="KrishiBor">
+                    <h2>Krihi Bor 20</h2>
                     <p>Min. Qty: 10 Kilograms</p>
                 </a>
             </div>
             <div class="product">
                 <a href="product.html">
-                    <img src="moped-g.jpg" alt="Moped G">
-                    <h2>MOPED G® (Imidacloprid 0.3% GR)</h2>
+                    <img src="moped-g.jpg" alt="Kala Sona">
+                    <h2>Kala Sona (Seaweed Extract)</h2>
                     <p>Min. Qty: 10 Kilograms</p>
                 </a>
             </div>
             <div class="product">
                 <a href="product.html">
-                    <img src="elite.jpg" alt="Elite">
-                    <h2>ELITE®</h2>
+                    <img src="elite.jpg" alt="GreenGold">
+                    <h2>Green Gold</h2>
                     <p>Min. Qty: 10 Kilograms</p>
                 </a>
             </div>
             <div class="product">
                 <a href="product.html">
-                    <img src="elite.jpg" alt="Elite">
-                    <h2>ELITE®</h2>
+                    <img src="elite.jpg" alt="Highzinc">
+                    <h2>High Zinc</h2>
                     <p>Min. Qty: 10 Kilograms</p>
                 </a>
             </div>
             <div class="product">
                 <a href="product.html">
-                    <img src="elite.jpg" alt="Elite">
-                    <h2>ELITE®</h2>
+                    <img src="elite.jpg" alt="Killer">
+                    <h2>Killer</h2>
                     <p>Min. Qty: 10 Kilograms</p>
                 </a>
             </div>
             <div class="product">
                 <a href="product.html">
-                    <img src="elite.jpg" alt="Elite">
-                    <h2>ELITE®</h2>
+                    <img src="elite.jpg" alt="Ganna">
+                    <h2>Ganna</h2>
                     <p>Min. Qty: 10 Kilograms</p>
                 </a>
             </div>
             <div class="product">
                 <a href="product.html">
-                    <img src="lucifer.jpg" alt="Lucifer">
-                    <h2>LUCIFER® (Thiamethoxam 12.6% + Lambda Cyhalothrin)</h2>
+                    <img src="lucifer.jpg" alt="Bloomer">
+                    <h2>Krishak Bloomer G (Nitrobenzene 15%/h2>)</h2>
                     <p>Min. Qty: 10 Kilograms</p>
                 </a>
             </div>
             <div class="product">
                 <a href="product.html">
-                    <img src="lucifer.jpg" alt="Lucifer">
-                    <h2>LUCIFER® (Thiamethoxam 12.6% + Lambda Cyhalothrin)</h2>
+                    <img src="lucifer.jpg" alt="Bio Synergy">
+                    <h2>Krishi Bio Synergy</h2>
                     <p>Min. Qty: 10 Kilograms</p>
                 </a>
             </div>
