--- a/product.html
+++ b/product.html
@@ -71,8 +71,8 @@
             </div>
             <div class="product">
                 <a href="./product/boomflower.html">
-                    <img src="./product/product assests/bloomflower.png" alt="bloomflower">
-                    <h2>Bloom Flower</h2>
+                    <img src="./product/product assests/bloomflower.png" alt="boomflower">
+                    <h2>Boom Flower</h2>
                 </a>
             </div>
             <div class="product">
