--- a/product/GreenGold.html
+++ b/product/GreenGold.html
@@ -49,6 +49,8 @@
                         <br><p><strong>Use/Acre:</strong> Foliar Spray: 250ml</p>
                         <br><p><strong>Crop:</strong> Paddy, Wheat, Mentha, Potato, Bhindi, Pea, Other Crops</p>
                         <br><p><strong>Benefits:</strong> Improved vegetative growth, enhanced flowering, increased flower-to-fruit conversion, and reduced flower and fruit drop.</p>
+                        <br><p><strong>Packaging:</strong> 100ml, 250ml, 500ml, 1ltr</p>
+
                     </div>
                 </div>
             </div>
