--- a/product/HighZinc.html
+++ b/product/HighZinc.html
@@ -50,6 +50,8 @@
                         <br><p><strong>Use/Acre:</strong> 5KG - 8KG</p>
                         <br><p><strong>Crop:</strong> Paddy, Wheat, Mentha, Mustard, Rice Gram, Other Crops</p>
                         <br><p><strong>Benefits:</strong> Larger leaves, Control Disease</p>
+                        <br><p><strong>Packaging:</strong> 1kg, 5kg</p>
+
                     </div>
                 </div>
             </div>
