--- a/product/KrishakPower.html
+++ b/product/KrishakPower.html
@@ -49,6 +49,7 @@
                         <br><p><strong>Use:</strong> Foliar Spray: 4-5gm/L, Soil Application: 1-3kg/Acre</p>
                         <br><p><strong>Crop:</strong>  vegetables, fruits, ornamental plants, cereals, pulses, flowers, spices and almost all crops.</p>
                         <br><p><strong>Benefits:</strong> Help plants absorb more nutrients and water,  produce higher quality yields.</p>
+                        <br><p><strong>Packaging:</strong> 1kg</p>
                     </div>
                 </div>
             </div>
