--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <div class=" container main-nav flex">
             <a href="#" class="company-logo">
                 <img src="assets/company logo.png" alt="Company Logo">
+                <h1>KRISHI ORGANICS</h1>
             </a>
             <div class="nav-links" id="nav-links">
                 <ul class="flex">
@@ -137,6 +138,11 @@
                     <h3>Fungicides</h3>
 
                 </div>
+                <div class="features-card flex card">
+                    <img src="home/technical.jpg" class="card-image h-b" width="150px" alt="Fertilisers icon">
+                    <h3>Technical</h3>
+
+                </div>
             </div>
         </div>
     </section>
@@ -147,7 +153,7 @@
             <div class="footer-section">
                 <div class="footer-left ">
                     <a href="#" class="company-logo">
-                        <img src="about us/aboutAssets/company logo.png" alt="company's logo">
+                        <img src="assets/logo2.png" alt="company's logo">
                     </a>
                 </div>
                 <div class="footer-right ">
