--- a/product.html
+++ b/product.html
@@ -164,13 +164,13 @@
                 <h4>© Copyright 2024 by Krishi Organics</h4>
             </div>
             <div class="subfooter-right flex">
-                <a href="#">
+                <a href="https://www.facebook.com/profile.php?id=61562248426338">
                     <i class="fa-brands fa-facebook-f" style="color: #ffffff;"></i>
                 </a>
-                <a href="#">
+                <a href="https://www.instagram.com/krishiorganics?igsh=MWZnMXFnY3Zwb2YxYw==">
                     <i class="fa-brands fa-instagram" style="color: #f6f7f8;"></i>
                 </a>
-                <a href="#">
+                <a href="https://www.youtube.com/@krishiorganics.01">
                     <i class="fa-brands fa-youtube" style="color: #f7f7f8;"></i>
                 </a>
             </div>
