--- a/product/KrishiCalbor.html
+++ b/product/KrishiCalbor.html
@@ -38,7 +38,7 @@
         
             <div class="card">
                 <div class="image">
-                    <img src="./product/product assests/krishicalbor.jpg" alt="krishicalbor">
+                    <img src="./product assests/krishicalbor.jpg" alt="krishicalbor">
                 </div>
                 <div class="content">
                     <div class="title">KRISHI CALBOR PLUS</div>
