--- a/product/Ganna.html
+++ b/product/Ganna.html
@@ -38,7 +38,7 @@
         
             <div class="card">
                 <div class="image">
-                    <img src="/product/product assests/ganna.jpg" alt="Ganna">
+                    <img src=".product assests/ganna.jpg" alt="Ganna">
                 </div>
                 <div class="content">
                     <div class="title">GANNA</div>
