--- a/product/GreenGold.html
+++ b/product/GreenGold.html
@@ -38,7 +38,7 @@
         
             <div class="card">
                 <div class="image">
-                    <img src="/product/product assests/greengold.jpg" alt="greengold">
+                    <img src="./product assests/greengold.jpg" alt="greengold">
                 </div>
                 <div class="content">
                     <div class="title">GREEN GOLD</div>
