--- a/product.html
+++ b/product.html
@@ -45,7 +45,7 @@
       <section class=" product-section container" >
         
             <div class="product">
-                <a href="/product/zinc-33.html">
+                <a href="./product/zinc-33.html">
                     <img src="./product/product assests/zinc-33.png" alt="Zinc-33">
                     <h2 >Zinc-33</h2>
                 </a>
